# slughorn

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pytest.ini  slughorn-cairo.hpp  slughorn-canvas.hpp  slughorn-emoji.hpp  slughorn-freetype.hpp  slughorn-ft2.hpp  slughorn-nanosvg.hpp  slughorn-serial.hpp  slughorn-skia.hpp  slughorn.cpp  slughorn.hpp
ai/: context-core.md  context-python.md  context-todo-canvas.md  context-todo-pybind.md  context-todo-textdilation.md
doc/: UserGuide.md  build.sh  cover.md  darkmode.tex
example/: CMakeLists.txt  slughorn-example-glfw.cpp
ext/: nanosvg-00-gradient-units-field.diff  nanosvg-01-push-attr-id-inherit.diff  nanosvg-02-obb-linear-gradient-coords.diff  nanosvg.diff  skia-args.gn  slughorn-python.cpp
slughorn/: blend2d.hpp  cairo.hpp  canvas.hpp  emoji.hpp  freetype.hpp  nanosvg.hpp  render.hpp  serial.hpp  skia.hpp  slughorn.cpp  slughorn.hpp  tessellate.hpp
test/: slughorn-test-bands.cpp  slughorn-test-blend2d.cpp  slughorn-test-cairo.cpp  slughorn-test-canvas.cpp  slughorn-test-emoji.html  slughorn-test-nanosvg.cpp  slughorn-test-python.py  slughorn-test-render.cpp  slughorn-test-scanlinesweep.cpp  slughorn-test-tessellate.cpp  slughorn_export.py  slughorn_render.py  slughorn_serial.py
test/benchmark/: slughorn-benchmark-python.py
test/python/: conftest.py  test_canvas.py  test_freetype.py  test_nanosvg.py  test_render.py  test_serial.py  test_slughorn.py  test_tessellate.py
